--- a/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
@@ -14,7 +14,11 @@
         src="/assets/icons/Alert_Title.svg"
         slot="start"
       ></ion-icon>
-      <p [style]="'color: ' + getHeaderColors().textColor" class="event-header" [innerHTML]="event.header"></p>
+      <p
+        [style]="'color: ' + getHeaderColors().textColor"
+        class="event-header"
+        [innerHTML]="event.header"
+      ></p>
     </span>
     <p>
       <span
@@ -70,7 +74,11 @@
         src="/assets/icons/Alert_Title.svg"
         slot="start"
       ></ion-icon>
-      <p [style]="'color: ' + getHeaderColors().textColor" class="event-header" [innerHTML]="event.header"></p>
+      <p
+        [style]="'color: ' + getHeaderColors().textColor"
+        class="event-header"
+        [innerHTML]="event.header"
+      ></p>
     </span>
     <p
       [innerHTML]="
