style: update event switcher color AB#27277

--- a/interfaces/IBF-dashboard/src/app/components/event-switcher/event-switcher.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/event-switcher/event-switcher.component.html
@@ -18,7 +18,7 @@
       [class.selected]="event?.eventName === selectedEventName"
       shape="round"
       slot="start"
-      [color]="getColor(event)"
+      color="ibf-trigger-alert-primary"
       size="small"
       (click)="switchEvent(event)"
     >
@@ -41,7 +41,7 @@
       [class.selected]="event?.eventName === selectedEventName"
       shape="round"
       slot="start"
-      [color]="getColor(event)"
+      color="ibf-trigger-alert-primary"
       size="small"
       (click)="switchEvent(event)"
     >
