style: show border on hover AB#27277

--- a/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.html
@@ -14,7 +14,13 @@
 >
   <div class="dialogue-turn--content">
     <ion-card
-      [style.border]="isSelected ? '0.125rem solid ' + borderColor : null"
+      (mouseover)="onMouseOver()"
+      (mouseout)="onMouseOut()"
+      [style.border-color]="
+        mouseOver || isSelected
+          ? borderColor
+          : 'var(--ion-color-fiveten-neutral-100)'
+      "
     >
       <ion-card-content>
         <ng-content></ng-content>
