--- a/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.scss
@@ -5,6 +5,7 @@
     box-shadow: none;
     background-color: var(--ion-color-fiveten-neutral-100);
     color: var(--ion-color-ibf-black);
+    border: 0.125rem solid var(--ion-color-fiveten-neutral-100);
   }
 }
 
